Add favicon to index.html and iconography entry in README.md

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Budget, Calculator">
     <meta name="author" content="Martin Ward">
     <title>Personal Budget Calculator</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/pbc_icon.ico"/>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
