Add header and styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <meta name="keywords" content="Budget, Calculator">
     <meta name="author" content="Martin Ward">
     <title>Personal Budget Calculator</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/pbc_icon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/pbc_icon.ico"/>    
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div id="heading">
+            <h1>Personal Budget Calculator</h1>
+        </div>
+    </header>
     
     <script src="assets/js/script.js"></script>
 </body>
