Add how to use box

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             <h1>Personal Budget Calculator</h1>
         </div>
     </header>
+    <section>
+        <div class="container">
+            <details id="how-to-use">
+                <summary>
+                    How to use
+                </summary>
+                Select your currency then fill in the form with your predicted expenditure for the month. Each box has the option to calculate daily, weekly, monthly, or yearly. Select the appropriate option for each item. If more boxes are needed you can create more by clicking the <span id="green">+</span> button and remove them by clicking the <span id="red">x</span> button. Once all of your details hev been entered, click the calculate button to view results. Form data can be amended and re-calculated if you wish to see how the changes impact on the results.
+            </details>
+        </div>
+    </section>
     
     <script src="assets/js/script.js"></script>
 </body>
