Add container for the form section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <h1>Personal Budget Calculator</h1>
         </div>
     </header>
+
+    <!-- How to use and currency selector section -->
     <section>
         <div class="container">
             <details id="how-to-use">
@@ -33,6 +35,13 @@
                 <option value="€">€ EUR</option>
                 <option value="$">$ USD</option>
             </select>
+        </div>
+    </section>
+
+    <!-- Form Section -->
+    <section>
+        <div classs="container">
+            
         </div>
     </section>
     
