Add income form section and some styling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,71 @@
     <!-- Form Section -->
     <section>
         <div classs="container">
-            
+            <form>
+                <details>
+                    <summary><h2>Income</h2></summary>
+                    <div class="user-input">
+                        <label for="wages">Wages (after tax)</label>
+                        <input type="number" id="wages" name="wages" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="pension">Pension</label>
+                        <input type="number" id="pension" name="pension" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="rent">Rent from lodgers/tenants</label>
+                        <input type="number" id="rent" name="rent" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="child-sup-rec">Child support received</label>
+                        <input type="number" id="child-sup-rec" name="child-sup-rec" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="invest">Investments</label>
+                        <input type="number" id="invest" name="invest" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="benefits">Benefits</label>
+                        <input type="number" id="benefits" name="benefits" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                </details>
+            </form>
         </div>
     </section>
     
