Add styling to details marker

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <!-- How to use and currency selector section -->
     <section>
         <div class="container">
-            <details id="how-to-use">
+            <details id="how-to-use" >
                 <summary>
                     How to use
                 </summary>
-                Select your currency then fill in the form with your predicted expenditure for the month. Each box has the option to calculate daily, weekly, monthly, or yearly. Select the appropriate option for each item. If more boxes are needed you can create more by clicking the <span id="green">+</span> button and remove them by clicking the <span id="red">x</span> button. Once all of your details have been entered, click the calculate button to view results. Form data can be amended and re-calculated if you wish to see how the changes impact on the results.
+                <div id="how-to-info">
+                    Select your currency then fill in the form with your predicted expenditure for the month. Each box has the option to calculate daily, weekly, monthly, or yearly. Select the appropriate option for each item. If more boxes are needed you can create more by clicking the <span id="green">+</span> button and remove them by clicking the <span id="red">x</span> button. Once all of your details have been entered, click the calculate button to view results. Form data can be amended and re-calculated if you wish to see how the changes impact on the results.
+                </div>
             </details>
         </div>
         <div class="container" id="currency-wrapper">
@@ -42,8 +44,8 @@
     <section>
         <div classs="container">
             <form>
-                <details>
-                    <summary><h2>Income</h2></summary>
+                <details open>
+                    <summary class="drop"><h2>Income</h2></summary>
                     <div class="user-input">
                         <label for="wages">Wages (after tax)</label>
                         <input type="number" id="wages" name="wages" placeholder="0">
