Add finance/debt form section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,85 @@
                             <option value="Yearly">Yearly</option>
                         </select>
                     </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
+                </details>
+                <details>
+                    <summary class="drop"><h2>Finances/Debt</h2></summary>
+                    <div class="user-input">
+                        <label for="personal-loan">Personal Loan</label>
+                        <input type="number" id="personal-loan" name="personal-loan" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="student-loan">Student Loan</label>
+                        <input type="number" id="student-loan" name="student-loan" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="credit-cards">Credit Card/s</label>
+                        <input type="number" id="credit-cards" name="credit-cards" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="store-cards">Store Card/s</label>
+                        <input type="number" id="store-cards" name="store-cards" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="hire-purchase">Hire Purchase</label>
+                        <input type="number" id="hire-purchase" name="hire-purchase" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="catalogue">Catalogue/s</label>
+                        <input type="number" id="catalogue" name="catalogue" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="child-sup">Child Support</label>
+                        <input type="number" id="child-sup" name="child-sup" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
                 </details>
             </form>
         </div>
