Add savings & investments and household bills form sections

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                 </details>
                 <details>
-                    <summary class="drop"><h2>Finances/Debt</h2></summary>
+                    <summary class="drop"><h2>Finances & Debt</h2></summary>
                     <div class="user-input">
                         <label for="personal-loan">Personal Loan</label>
                         <input type="number" id="personal-loan" name="personal-loan" placeholder="0">
@@ -175,6 +175,138 @@
                     <div class="user-input">
                         <label for="child-sup">Child Support</label>
                         <input type="number" id="child-sup" name="child-sup" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
+                </details>
+                <details>
+                    <summary class="drop"><h2>Savings & Investments</h2></summary>
+                    <div class="user-input">
+                        <label for="savings-pay">Savings Account Payments</label>
+                        <input type="number" id="savings-pay" name="savings-pay" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="isa-pay">ISA Payments</label>
+                        <input type="number" id="isa-pay" name="isa-pay" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="credit-cards">Credit Card/s</label>
+                        <input type="number" id="credit-cards" name="credit-cards" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="child-savings">Child Savings/Trust Fund</label>
+                        <input type="number" id="child-savings" name="child-savings" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="hire-purchase">Hire Purchase</label>
+                        <input type="number" id="hire-purchase" name="hire-purchase" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="catalogue">Investments</label>
+                        <input type="number" id="investments" name="investments" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
+                </details>
+                <details>
+                    <summary class="drop"><h2>Household Bills</h2></summary>
+                    <div class="user-input">
+                        <label for="mortgae-rent">Mortgae/Rent</label>
+                        <input type="number" id="mortgae-rent" name="mortgae-rent" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="council-tax">Council Tax/Rates</label>
+                        <input type="number" id="council-tax" name="council-tax" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="gas">Gas</label>
+                        <input type="number" id="gas" name="gas" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="electricity">Electricity</label>
+                        <input type="number" id="electricty" name="electricity" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="other-fuel">Other Fuel Costs (Oil, Coal, Wood)</label>
+                        <input type="number" id="other-fuel" name="other-fuel" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="water">Water</label>
+                        <input type="number" id="water" name="water" placeholder="0">
                         <select name="period" class="period">
                             <option value="Daily">Daily</option>
                             <option value="Weekly">Weekly</option>
