Add insurance form section

--- a/index.html
+++ b/index.html
@@ -229,16 +229,6 @@
                         </select>
                     </div>
                     <div class="user-input">
-                        <label for="hire-purchase">Hire Purchase</label>
-                        <input type="number" id="hire-purchase" name="hire-purchase" placeholder="0">
-                        <select name="period" class="period">
-                            <option value="Daily">Daily</option>
-                            <option value="Weekly">Weekly</option>
-                            <option value="Monthly" selected>Monthly</option>
-                            <option value="Yearly">Yearly</option>
-                        </select>
-                    </div>
-                    <div class="user-input">
                         <label for="catalogue">Investments</label>
                         <input type="number" id="investments" name="investments" placeholder="0">
                         <select name="period" class="period">
@@ -307,6 +297,92 @@
                     <div class="user-input">
                         <label for="water">Water</label>
                         <input type="number" id="water" name="water" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
+                </details>
+                <details>
+                    <summary class="drop"><h2>Insurance</h2></summary>
+                    <div class="user-input">
+                        <label for="home-insurance">Home Insurance</label>
+                        <input type="number" id="home-insurance" name="home-insurance" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="contents-insurance">Contents Insurance</label>
+                        <input type="number" id="contents-insurance" name="contents-insurance" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="life-insurance">Life Insurance</label>
+                        <input type="number" id="life-insurance" name="life-insurance" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="pet-insurance">Pet Insurance</label>
+                        <input type="number" id="pet-insurance" name="pet-insurance" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="home-appliance-insurance">Home Appliance Insurance</label>
+                        <input type="number" id="home-appliance-insurance" name="home-appliance-insurance" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="boiler-cover">Boiler Cover</label>
+                        <input type="number" id="boiler-cover" name="boiler-cover" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="high-value-insurance">High Value Items Insurance</label>
+                        <input type="number" id="high-value-insurance" name="high-value-insurance" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="vehicle-insurance">Vehicle Insurance</label>
+                        <input type="number" id="vehicle-insurance" name="vehicle-insurance" placeholder="0">
                         <select name="period" class="period">
                             <option value="Daily">Daily</option>
                             <option value="Weekly">Weekly</option>
