Add subscriptions and transport form sections

--- a/index.html
+++ b/index.html
@@ -394,6 +394,158 @@
                         <span>+</span>
                     </div>
                 </details>
+                <details>
+                    <summary class="drop"><h2>Subscriptions & Direct Debits</h2></summary>
+                    <div class="user-input">
+                        <label for="internet">Internet</label>
+                        <input type="number" id="internet" name="internet" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="home-phone">Home Phone</label>
+                        <input type="number" id="home-phone" name="home-phone" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="tv-subscriptions">TV Subscriptions (Sky, Virgin Media, BT etc)</label>
+                        <input type="number" id="tv-subscriptions" name="tv-subscriptions" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="streaming">Streaming Services (Netflix, Now TV, Prime Video etc)</label>
+                        <input type="number" id="streaming" name="streaming" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="tv-licence">TV Licence</label>
+                        <input type="number" id="tv-licence" name="tv-licence" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="mobile-phone">Mobile Phone</label>
+                        <input type="number" id="mobile-phone" name="mobile-phone" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="gym-membership">Gym Membership</label>
+                        <input type="number" id="gym-membership" name="gym-membership" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="website-subscriptions">Website Subscriptions</label>
+                        <input type="number" id="website-subscriptions" name="website-subscriptions" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="book-club">Book Club</label>
+                        <input type="number" id="book-club" name="book-club" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
+                </details>
+                <details>
+                    <summary class="drop"><h2>Transport</h2></summary>
+                    <div class="user-input">
+                        <label for="vehicle-tax">Vehicle Tax</label>
+                        <input type="number" id="vehicle-tax" name="vehicle-tax" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="mot">MOT</label>
+                        <input type="number" id="mot" name="mot" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="servicing">Servicing</label>
+                        <input type="number" id="servicing" name="servicing" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="fuel">Fuel</label>
+                        <input type="number" id="fuel" name="fuel" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="public-transport">Public Transport</label>
+                        <input type="number" id="public-transport" name="public-transport" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
+                </details>
             </form>
         </div>
     </section>
